Google Drive track changes

--- a/results.Rmd
+++ b/results.Rmd
@@ -9,7 +9,7 @@ output:
 
 Overall, the results from the simulated data experiments (Table \@ref(tab:pseudoTable)) demonstrate that the proposed multinomial ensemble filter is able to successfully detect disturbances under a range of different conditions. 
 
-Experiment 1, which aimed to capture a single disturbance at a single site for a single pool, was already depicted in Figure \@ref(fig:enkf) and Figure \@ref(fig:concept) when discussing the challenges facing traditional Kalman Filter variants. Specifically, Figure \@ref(fig:enkf) shows that the multinomial filter (blue) is able to capture the discrete nature of the disturbance at time 10, with the posterior probability of disturbance jumping from near zero before this event to 0.977 for the disturbance, and then dropping back down to near zero in subsequent years. Figure \@ref(fig:concept) bottom illustrates what is occurring in this disturbance year. As in the prior 9 years the forecast itself is multimodal, with most of the ensemble members predicting no disturbance and a small number predicting a disturbance event. The multinomial filter assigns a prior mean and variance to each mode based on the ensemble summary statistics, which is the same as a traditional EnKF except for the stratification by disturbance type, and then assigns each state a prior probability based on the ensemble frequency of being in each state (disturbed = dark red, undisturbed = green). When the observed data (red) suggests a large drop in LAI, the posterior (blue) not only updates the ensemble mean and variance of each mode, but also the probability of being in each mode. This posterior is still multimodal, but in this specific instance the weight assigned the undisturbed mode (0.023) is too low to be visually notable. Noteworthy is that the LAI in years 12 and 15 is actually lower than that in the disturbance year but the multinomial, yet the model still assigns this as being undisturbed. This occurs because in these years the observed low LAI is compatible with the observation error around the undisturbed forecast, which has a higher prior probability than the odds of subsequent disturbance.
+Experiment 1, which aimed to capture a single disturbance at a single site for a single pool, was already depicted in Figure \@ref(fig:enkf) and Figure \@ref(fig:concept) when discussing the challenges facing traditional Kalman Filter variants. Specifically, Figure \@ref(fig:enkf) shows that the multinomial filter (blue) is able to capture the discrete nature of the disturbance at time 10, with the posterior probability of disturbance jumping from near zero before this event to 0.977 for the disturbance, and then dropping back down to near zero in subsequent years. Figure \@ref(fig:concept) bottom illustrates what is occurring in this disturbance year. As in the prior 9 years the forecast itself is multimodal, with most of the ensemble members predicting no disturbance and a small number predicting a disturbance event. The multinomial filter assigns a prior mean and variance to each mode based on the ensemble summary statistics, which is the same as a traditional EnKF except for the stratification by disturbance type, and then assigns each state a prior probability based on the ensemble frequency of being in each state (disturbed = dark red, undisturbed = green). When the observed data (red) suggests a large drop in LAI, the posterior (blue) not only updates the ensemble mean and variance of each mode, but also the probability of being in each mode. This posterior is still multimodal, but in this specific instance the weight assigned the undisturbed mode (0.023) is too low to be visually notable. Noteworthy is that the LAI in years 12 and 15 is actually lower than that in the disturbance year, yet the model still assigns this as being undisturbed. This occurs because in these years the observed low LAI is compatible with the observation error around the undisturbed forecast, which has a higher prior probability than the odds of subsequent disturbance.
 
 Experiment 2 expands the assimilation to a multivariate forecast, in this case including joint predictions for leaf, wood, and soil carbon, and with a disturbance to both the leaf and wood pools (Figure \@ref(fig:sssd)). Figure \@ref(fig:sssdBi) shows the multivariate nature of the detection of the disturbance event at time 10, with the bimodal forecast ensemble shown in purple (undisturbed in the top right, disturbed in the bottom left), an observation in black that is consistent with the disturbed state, and the posterior ensemble in green. Arrows depict the adjustment of a random subset of individual ensemble members from the forecast prior to the analysis posterior.
 
@@ -79,11 +79,13 @@ legend("topleft",
        cex = 1.5)
 ```
 
-Experiment 3 (Figure \@ref(fig:multiPseudo) top row) illustrates the ability of the multinomial model to select between more than one disturbance. In the bivariate plot (top right panel) we can see that the model can successfully distinguishing between two types of disturbance, one that involves the loss of both wood and leaf biomass (e.g. fire, logging) and the other that just removes leaf biomass (e.g. defoliating forest pest). Experiment 4 (Figure \@ref(fig:multiPseudo) middle row) is similar to 3 but extends the woody biomass removing disturbance to one that causes a switch in PFT from a forest to a low-stature vegetation type (e.g. grassland, shrubland, agriculture), demonstrating that the model can handle land use and land cover changes. Finally, experiment 5 (Figure \@ref(fig:multiPseudo) bottom row) illustrates the extension of the assimilation to multiple sites, one that experiences and disturbance and one that does not. In the years prior to the disturbance the multivariate nature of the assimilation allows us to borrow strength across sites, with observations at one site reducting uncertainty not just at that site but at the other site as well based on the cross-site forecast covariance. That said,this example illustrates the ability of the multinomial model to avoid the impact of spurious correlations across sites during disturbance events. The presence of the disturbance at site 1 did not cause a reduction in biomass in site 2 during the disturbance, nor did it increase the productivity in site 2 in the years post-disturbance despite the large increase observed at site 1.
-  
-```{r multiPseudo, echo=FALSE, message = FALSE, fig.cap="Simulated experiments 3-5: Left hand column shows timeseries for the wood pool for all three experiments; Right hand shows bivariate ensemble adjustment at time of disturbance",fig.asp=1.25}
+** TODO: in bivariate plots, data is hard to see **
 
-## figure with 3 rows, 2 col showing timeseries in rt and bivariate in left
+Experiment 3 (Figure \@ref(fig:multiPseudo) top row) illustrates the ability of the multinomial model to select between more than one disturbance. In the bivariate plot (top right panel) we can see that the model can successfully distinguishing between two types of disturbance, one that involves the loss of both wood and leaf biomass (e.g. fire, logging) and the other that just removes leaf biomass (e.g. defoliating forest pest). Experiment 4 (Figure \@ref(fig:multiPseudo) middle row) is similar to 3 but extends the woody biomass removing disturbance to one that causes a switch in PFT from a forest to a low-stature vegetation type (e.g. grassland, shrubland, agriculture), demonstrating that the model can handle land use and land cover changes. Finally, experiment 5 (Figure \@ref(fig:multiPseudo) bottom row) illustrates the extension of the assimilation to multiple sites, one that experiences a disturbance and one that does not. In the years prior to the disturbance the multivariate nature of the assimilation allows us to borrow strength across sites, with observations at one site reducing uncertainty not just at that site but at the other site as well based on the cross-site forecast covariance. That said,this example illustrates the ability of the multinomial model to avoid the impact of spurious correlations across sites during disturbance events. The presence of the disturbance at site 1 did not cause a reduction in biomass in site 2 during the disturbance, nor did it increase the productivity in site 2 in the years post-disturbance despite the large increase observed at site 1.
+  
+```{r multiPseudo, echo=FALSE, message = FALSE, fig.cap="Simulated experiments 3-5: Left hand column shows time series for the wood pool for all three experiments; Right hand shows bivariate ensemble adjustment at time of disturbance",fig.asp=1.25}
+
+## figure with 3 rows, 2 col showing time series in rt and bivariate in left
 #par(mfrow=c(3,2))
 m = matrix(c(1,1,2,3,3,4,5,5,6),nrow=3,byrow = TRUE)
 layout(m)
@@ -171,7 +173,6 @@ legend("bottomright",
        pch=c(1,3,18),col=c("purple","#b2df8a",1),
        cex = 1.25)
 
-
 ######### experiment 5 - one disturb, 2 sites
 load("exp5trim.Rdata") ##Generated by TwoSite_SingleDisturb_MultiPool.Rmd
 pool.names=c("Leaf","Soil","Wood")
@@ -223,7 +224,7 @@ legend("topleft",
 
 ## VSEM Calibration
 
-Prior to applying the VSEM to simulate the conifer forest carbon cycle in Oregon the model was calibrated against AGB, leaf C, and NEE data from Ameriflux site US-ME2.  Best fit parameters are given in Supplemental Table \@ref(tab:parameters). The best fit to the observed data was for AGB, which had a $R^2$ of 0.977, a RMSE of 0.089 $kgC/m^2$ (1.7%), and a bias of -1.1% (-0.059 $kgC/m^2$) (Supplemental figure \@ref(fig:calibration) ). Achieving this fit came at the cost of nontrivial systematic biases in both leaf carbon (0.064 $kgC/m^2$, 13%) and NEE (0.528 $kgC/m^2/year$, 69%). The RMSEs for leaf carbon (0.067 $kgC/m^2$, 13.6%) and NEE (0.612 $kgC/m^2/year$, 80%) were similar to the biases, suggesting that most of the model error was systematic, particularly for leaf carbon.
+Prior to applying the VSEM to simulate the conifer forest carbon cycle in Oregon the model was calibrated against AGB, leaf C, and NEE data from AmeriFlux site US-ME2.  Best fit parameters are given in Supplemental Table \@ref(tab:parameters). The best fit to the observed data was for AGB, which had a $R^2$ of 0.977, a RMSE of 0.089 $kgC/m^2$ (1.7%), and a bias of -1.1% (-0.059 $kgC/m^2$) (Supplemental figure \@ref(fig:calibration) ). Achieving this fit came at the cost of nontrivial systematic biases in both leaf carbon (0.064 $kgC/m^2$, 13%) and NEE (0.528 $kgC/m^2/year$, 69%). The RMSEs for leaf carbon (0.067 $kgC/m^2$, 13.6%) and NEE (0.612 $kgC/m^2/year$, 80%) were similar to the biases, suggesting that most of the model error was systematic, particularly for leaf carbon.
 
 The dynamic process errors for the leaf, wood, and soil pools, which were approximated as the RMSE of the _change_ in each pool each year, were 0.01, 0.03, and 0.15 $kgC/m^2/yr$. This represents a dynamic error of 2.1%, 0.6%, and 0.7% respectively relative to the size of the pool and a CV of 114% and 17% for leaf and wood relative to the observed annual biomass increment.
 
@@ -237,8 +238,9 @@ Overall, while the inability of the calibration to capture multiple data constra
 # knitr::kable(paramTable, caption = "VSEM parameter estimates")
 ```
 
-
 ## Remotely-sensed disturbance in Oregon
+
+** TODO: Dongchen wants examples for other disturbances and to know why the assimilation is so constrained **
 
 ```{r oregon, echo=FALSE, fig.asp=1, fig.cap="Filter divergence and disturbance detection for central Oregon test case. Left column is the default configuration while the right column is a reduced observation error experiment (Exp 2). Top row is the assimilation for an example site. Middle row shows the across-site distribution of divergence metrics and how these vary by disturbance magnitude (purple) and disturbance type (symbols). Bottom row shows how the probability of detecting the disturbance varies with disturbance magnitude"}
 ## summary figure showing didn't work great at default error rate
@@ -299,7 +301,6 @@ for(i in 1:2){
                   text.col=c(1,disturb.col[2:5]))
 }
 
-
 ### Row 3: Disturbance magnitude vs P(detection) ###
 pred.seq=list()
 distabs = obs.pre-obs.dist
@@ -321,7 +322,7 @@ for(i in 1:2){
                   text.col=c(1,disturb.col[2:5]))
 }
 ```
-In total we assimilated 365 example AGB timeseries from our central Oregon study region, with 81 coming from undisturbed sites and 78, 88, 92, and 17 coming from clear cuts, fires, forest pests, and other disturbances, respectively. Initial applications of the multinomial filter exhibited high rates of filter divergence, with a coverage of only `r format(stats[[1]]$div.cov*100,digits=3)`% of the observations falling within the Analysis 95% CI at the end of the timeseries. Filter divergence is a known issue for Kalman Filters, not something unique to our multinomial filter, and results from the model becoming falsely overconfident in itself such that it ignores, and diverges from, the data. Figure \@ref(fig:oregon) a demonstates an example of this for a site that experienced a forest fire in 1999, yet the model continues to believe the site is undisturbed. Across sites the magnitude of filter divergence observed was negatively correlated with the amount of biomass at the end of the timeseries (Figure \@ref(fig:oregon) b, p < `r format(anova(div.reg[[1]])$"Pr(>F)"[1],digits=3,scientific=TRUE)`). In other words, sites with low final biomass (i.e., large previous disturbance) showed a larger divergence and the divergence declined as the final biomass increased. Divergence also varied by disturbance type (p < `r format(anova(div.class[[1]])$"Pr(>F)"[2],digits=3,scientific=TRUE)`), with clear cuts having the lowest divergence for a given disturbance size and forest pests being lower than the fires and "other". Despite the issue of filter divergence there was still a positive relationship between disturbance magnitude and the posterior probability of detecting disturbance (Figure \@ref(fig:oregon) c, p < `r format(summary(dist.qb.abs[[1]])$coefficients[2,4],digits=3,scientific=TRUE)`). However, detection was rarely successful for AGB disturbances that removed less than 7.5 $kgC/m^2$ and did not exceed 50% until disturbances were larger than `r bm=coef(dist.qb.abs[[1]]); format(-bm[1]/bm[2],digits=2)` $kgC/m^2$.
+In total we assimilated 365 example AGB time series from our central Oregon study region, with 81 coming from undisturbed sites and 78, 88, 92, and 17 coming from clear cuts, fires, forest pests, and other disturbances, respectively. Initial applications of the multinomial filter exhibited high rates of filter divergence, with a coverage of only `r format(stats[[1]]$div.cov*100,digits=3)`% of the observations falling within the Analysis 95% CI at the end of the timeseries. Filter divergence is a known issue for Kalman Filters, not something unique to our multinomial filter, and results from the model becoming falsely overconfident in itself such that it ignores, and diverges from, the data. Figure \@ref(fig:oregon) a demonstates an example of this for a site that experienced a forest fire in 1999, yet the model continues to believe the site is undisturbed. Across sites the magnitude of filter divergence observed was negatively correlated with the amount of biomass at the end of the timeseries (Figure \@ref(fig:oregon) b, p < `r format(anova(div.reg[[1]])$"Pr(>F)"[1],digits=3,scientific=TRUE)`). In other words, sites with low final biomass (i.e., large previous disturbance) showed a larger divergence and the divergence declined as the final biomass increased. Divergence also varied by disturbance type (p < `r format(anova(div.class[[1]])$"Pr(>F)"[2],digits=3,scientific=TRUE)`), with clear cuts having the lowest divergence for a given disturbance size and forest pests being lower than the fires and "other". Despite the issue of filter divergence there was still a positive relationship between disturbance magnitude and the posterior probability of detecting disturbance (Figure \@ref(fig:oregon) c, p < `r format(summary(dist.qb.abs[[1]])$coefficients[2,4],digits=3,scientific=TRUE)`). However, detection was rarely successful for AGB disturbances that removed less than 7.5 $kgC/m^2$ and did not exceed 50% until disturbances were larger than `r bm=coef(dist.qb.abs[[1]]); format(-bm[1]/bm[2],digits=2)` $kgC/m^2$.
 
 The causes of filter divergence are known to be some combination of model overconfidence (e.g., insufficient process error, Q) and high observation error (R) in the data. As described in the Methods we ran additional computational experiments where we varied Q and R (\@ref(tab:QRexp)) to verify that without filter divergence the multinomial filter was able to capture real-world disturbances and to assess what level of variance inflation was required to do so. Figure \@ref(fig:oregon) d-f show the results for Experiment 2, where we experimented with reducing the observation error, R. In this experiment we see that the data assimilation follows the observations closely, with a much tighter interval estimate, and is able to catch the disturbance event (Figure \@ref(fig:oregon) d). We also see much lower incidence of filter divergence across sites, with a posterior coverage at the final timestep of `r format(stats[[2]]$div.cov*100,digits=3)`%, (Figure \@ref(fig:oregon) e). Divergence is no longer significantly affected by disturbance magnitude (p < `r format(summary(div.class[[2]])$coefficients[2,4],digits=3)`) and the only significant effect of disturbance type was a small reduction in divergence for clearcuts (p < `r format(summary(div.class[[2]])$coefficients[3,4],digits=3)`). Most importantly, detection probabilities were strongly related to disturbance magnitude (Figure \@ref(fig:oregon) f), successfully detecting disturbances that removed more than `r bm=coef(dist.qb.abs[[2]]); format(-bm[1]/bm[2],digits=2)` $kgC/m^2$.
 
