--- a/Paper.Rmd
+++ b/Paper.Rmd
@@ -40,7 +40,7 @@ Researchers have devoted considerable time and resources to developing "bottom-u
 
 A particularly critical part of carbon MRV is the impact of land use, land use change, forestry (LULUCF) and natural disturbance (e.g. wildfire, pests, wind), which can have major impacts on carbons stocks and accumulation, quickly turning C sinks into large sources [@harris2016; @Law2018; @Hudiburg_2019] . **TODO: Bev says delete: Natural and anthropogenic disturbance events are also places where management and policy can have the greatest impact on carbon pools and fluxes, in terms of increasing resilience, managing restoration and recovery, and avoiding transitions to alternative system states. Looking to the future, many types of disturbance are predicted to become more frequent and/or more intense [@seidl_forest_2017; Dale2001]. Compounding this, C stocks are likely to be more sensitive to changes in disturbance regimes than to the direct ecophysiological effects of climate and elevated $CO_2$ [@McDowell2020; @Andrews2018].** While there are a variety of approaches for monitoring and understanding C cycle processes for intact ecosystems, when it comes to disturbance the status quo is based on detecting disturbances (e.g., via remote sensing) and then using a simple look up table (i.e., emission factors) to quantify C cycle impacts [@eggleston2006; @Mitchell2017; @BULLOCK2021; @harris2021]. Active sensors such as lidar and SAR more directly capture changes in aboveground biomass, but do not inform other pools and fluxes [@Mitchell2017].  While the closely related fields of disturbance detection and classification, and LULUCF monitoring have made considerable advances [@KENNEDY2010; @ZHU2020; @VERBESSELT2012], the reliance on simple static look-up tables to quantify emissions is clearly missing considerable variability across space, time, and disturbance intensity.
 
-An alternative to look-up tables is to rely on process-based models to capture the spatiotemporal changes in the C cycle post disturbance. However, by themselves process-based models are going to misrepresent many disturbances, either under- or over-predicting individual events, both because there is an inherently stochastic component to disturbances (CITE) and because the representation of disturbance is highly simplified in most models (CITE), where major classes of disturbance are often absent (e.g., forest pests, [@Hicke2012; @DietzeMatthes2014]). Ultimately, MRV efforts should reflect the actual disturbance events, not those that were predicted. On the other hand, prescribing disturbance in models ignores the uncertainty in disturbance detection and brings us back to using look-up tables to prescribe how the disturbance is represented in the model.
+An alternative to look-up tables is to rely on process-based models to capture the spatiotemporal changes in the C cycle post disturbance. However, by themselves process-based models are going to misrepresent many disturbances, either under- or over-predicting individual events, both because there is an inherently stochastic component to disturbances and because the representation of disturbance is highly simplified in most models (@FisherKoven2020; @KEANE2015), where major classes of disturbance are often absent (e.g., forest pests, [@Hicke2012; @DietzeMatthes2014]). Ultimately, MRV efforts should reflect the actual disturbance events, not those that were predicted. On the other hand, prescribing disturbance in models ignores the uncertainty in disturbance detection and brings us back to using look-up tables to prescribe how the disturbance is represented in the model.
 
 **TODO: Bev suggests replacing the above paragraph with the IPCC AR6 text: Technological barriers and opportunities Monitoring, reporting, and verification. Development of satellite technologies to assess potential deforestation has grown in recent years with the release of 30 m data by Hansen et al. (2013), however, these data only captures tree cover loss, and increasing accuracy over time may limit its use for trend analysis (Ceccherini et al. 2020; Palahí et al. 2021). Datasets on forest losses are less well developed for reforestation and afforestation. As Mitchell et al. (2017) point out, there has been significant improvement in the ability to measure changes in tree and carbon density on sites using satellite data, but these techniques are still evolving and improving and they are not yet available for widespread use.**
 
