--- a/discussion.Rmd
+++ b/discussion.Rmd
@@ -42,12 +42,12 @@ Indeed, doing a better job at propagating model uncertainties correctly only bec
 In the following subsections we discuss ways that the proof-of-concept presented here could be applied and built upon. We start by addressing future directions that make use of the current algorithm "as is", discussing ways that we could better leverage multiple data constraints, improved disturbance priors, and existing disturbance data products.
 In terms of multiple data constraints, it is worth noting that, unlike in the simulated data experiment, our real-world application only relied on a single data constraint.
 If we had leveraged additional data constraints, we would have gained additional confidence in our ability to detect real disturbances.
-One way to do this is to bring in additional data on the same pool, in this case AGB, reducing the overall observation error. This could be done through some combination of field data [e.g., Forest Inventory and Analysis, CITE], lidar [e.g., GEDI, CITE], microwave vegetation optical depth [e.g., SMAP, CITE Koenings], or radar [e.g., BIOMASS, CITE]. 
+One way to do this is to bring in additional data on the same pool, in this case AGB, reducing the overall observation error. This could be done through some combination of field data [e.g., Forest Inventory and Analysis, @burrill_2021], lidar [e.g., GEDI, @duncanson2022], microwave vegetation optical depth [e.g., SMAP, @konings2017], or radar [@sinha2015review]. 
 This was not done in this example because data products based on different observations have different spatial resolutions, which would need to be addressed. Fusing in a data assimilation framework is well established but was judged beyond the scope of the current study because it requires running a fully spatial assimilation rather than a simple site-scale time series model. Basically, one either needs to run the assimilation at a fine spatial resolution and use an observation operator to map many model grid cells to one observation, or one could run the assimilation at a coarse spatial resolution and use an observation operator to map one model grid cell to many observations [@Dietze2017a].
 
 Another way would be to bring in additional data on different pools, such as LAI, which often has lower observation errors.
 In addition to the direct increase in data volumes, the positive correlation between LAI and AGB would allow the assimilation algorithm to borrow strength indirectly (i.e. observations of LAI would help constrain AGB and observations of AGB would help constrain LAI). 
-Existing LAI data products [e.g., MODIS, CITE] have the same spatial mismatch issue discussed above.
+Existing LAI data products [e.g., MODIS, @yan2016] have the same spatial mismatch issue discussed above.
 Alternatively, a data product based on LandSAT would be at the same resolution but would have required additional development [e.g., @Zhang2023] and would need to account for the observation error covariance between the two products (i.e. errors in data products based on the same underlying spectra would not be independent). 
 In addition to bringing in additional data constraints on different pools, we could also constrain our disturbance estimates using observations on different ecosystem fluxes and processes, such as eddy covariance (carbon, water, and energy fluxes), solar induced fluorescence (a proxy for gross primary productivity), thermal imaging (a proxy for water stress and evapotranspiration).
 
@@ -73,7 +73,7 @@ Analytically, instead of solving the full Multinomial filter jointly, it may be 
 First, one would analytically apply EnKF to each alternative disturbance state, analytically generating independent posteriors for each $X^L_t$.
 Next, one would then apply a Dirichlet-Multinomial model to the problem of updating $\vec{\rho_t}$, treating $X^L_t$ as known rather than jointly estimated. The math for this approach has yet to be fully fleshed out, and it remains to be seen how well this approximation works in practice and what information would be lost by solving the model conditionally rather than jointly.
 
-An alternative to analytical approximation is to rely on machine learning approaches to build an emulator (a.k.a. surrogate model) [CITE]. While emulators are often used to approximate process-based models, predicting what the model would have output given a set of inputs, here we want to construct an emulator to that Analysis step, predicting what the Multinomial filter would output (probability of disturbance, ecosystem pool means and variances) as a function of the Forecast model state and the observed data constraints. Emulators address not only the computational cost of scaling up but also the observation that similar sites are going to make similar predictions (e.g., adjacent LANDSAT pixels), and thus fully gridded models are going to perform highly redundant calculations. Emulators still require running the model and analysis (in this case the Multinomial filter), but rather than evaluating every location the filter is run for a subset of locations stratified by relevant variables (initial conditions, observed data constraints, and possibly also covariates like climate, soils, etc.). Flexible machine learning approaches are then used to build an emulator that predicts the outcome of a fully Bayesian model. For places where the full model was not run the emulator is then used to predict the full model, which in essence involves interpolating in environmental space and mapping this back to physical space.
+An alternative to analytical approximation is to rely on machine learning approaches to build an emulator (a.k.a. surrogate model) [@Fer2018]. While emulators are often used to approximate process-based models, predicting what the model would have output given a set of inputs, here we want to construct an emulator to that Analysis step, predicting what the Multinomial filter would output (probability of disturbance, ecosystem pool means and variances) as a function of the Forecast model state and the observed data constraints. Emulators address not only the computational cost of scaling up but also the observation that similar sites are going to make similar predictions (e.g., adjacent LANDSAT pixels), and thus fully gridded models are going to perform highly redundant calculations. Emulators still require running the model and analysis (in this case the Multinomial filter), but rather than evaluating every location the filter is run for a subset of locations stratified by relevant variables (initial conditions, observed data constraints, and possibly also covariates like climate, soils, etc.). Flexible machine learning approaches are then used to build an emulator that predicts the outcome of a fully Bayesian model. For places where the full model was not run the emulator is then used to predict the full model, which in essence involves interpolating in environmental space and mapping this back to physical space.
 
 ## Future Directions: Algorithm Development
 
