--- a/methods.Rmd
+++ b/methods.Rmd
@@ -190,7 +190,7 @@ Our third experiment was similar to the second but introduced a second disturban
 
 Our fourth experiment was similar to the third, but extended the single-site, multi-disturbance, multi-pool scenario to one where one disturbance type included a switch in PFT. Specifically PFT 2 was identical to the VSEM default, but PFT 1 was parameterized with a stem residence time that was increased by 10x to create a more tree-like PFT. In addition, we established a transition matrix where disturbance 1 (stand clearing) transitions from PFT1 to PFT2, while disturbance 2 (defoliation) keeps the current PFT is. As with the previous scenario, the prescribed disturbance in the pseudodata was type 1 (stand clearing, transition from forest to shrub).
 
-Our fifth and final experiment extended the analysis to a two-site scenario with spatial covariance across sites and pools, but with a disturbance occurring in one site but not at the other. To keep things simpler, this experiment reverted to a single disturbance type, same as experiment 2, except we dropped the disturbance probability to 2.5%. This scenario was designed to test a concern we had in previous research that a disturbance occurring at one site could cause the biomass to decline at other undisturbed sites because of the cross-site covariances [CITE Viskari, Hamze].
+Our fifth and final experiment extended the analysis to a two-site scenario with spatial covariance across sites and pools, but with a disturbance occurring in one site but not at the other. To keep things simpler, this experiment reverted to a single disturbance type, same as experiment 2, except we dropped the disturbance probability to 2.5%. This scenario was designed to test a concern we had in previous research that a disturbance occurring at one site could cause the biomass to decline at other undisturbed sites because of the cross-site covariances [@Dokoohaki2022].
      
 ## Remotely-sensed disturbance in Oregon
 
@@ -254,7 +254,7 @@ Prior to calibration we set the leaf area ratio (LAR) to 15.7 m2/kgC and leaf re
 
 To assess the performance of the Multinomial assimilation algorithm against real-world data, we sampled ~100 evergreen forest points for each disturbance class. We specifically sampled disturbance locations from the year 2004, which is sufficiently deep in the past that there is an observable disturbance recovery trajectory, but with a sufficiently long time-series prior to disturbance for the data assimilation to come into steady-state with the biomass data product. For each selected location we extracted a time-series from the remotely-sensed biomass product for use as the data constraint within the assimilation algorithm. The cover and disturbance products were not assimilated, but were just used to construct priors (see above) and assess performance.
 
-For each location we next extracted PAR driver data from the Daymet product [CITE] using the daymetr R package [@daymetr]. For each location the carbon pools were initialized using a multi-step process to account for the lack of leaf and soil C data at a landscape scale. To start we used the first time point in each biomass time-series as the initial condition for the wood pool. Next, using the US-ME2 initial conditions we performed a >10k year spin-up, and then sampled carbon pool ensemble members from the second half of this time-series. Next, for each ensemble member we imposed at disturbance that reduced wood and leaf biomass to 1% of their equilibrium values, then simulated a 200-year recovery trajectory. Finally, for each ensemble member we selected the stand age that minimized the squared error between the modeled biomass and the initial biomass, and then selected the leaf and soil C pools at that stand age. This results is an ensemble of leaf, wood, and soil carbon pools with a covariance structure that is consistent with the calibrated model's dynamics.
+For each location we next extracted PAR driver data from the Daymet product [@thornton2021] using the daymetr R package [@daymetr]. For each location the carbon pools were initialized using a multi-step process to account for the lack of leaf and soil C data at a landscape scale. To start we used the first time point in each biomass time-series as the initial condition for the wood pool. Next, using the US-ME2 initial conditions we performed a >10k year spin-up, and then sampled carbon pool ensemble members from the second half of this time-series. Next, for each ensemble member we imposed at disturbance that reduced wood and leaf biomass to 1% of their equilibrium values, then simulated a 200-year recovery trajectory. Finally, for each ensemble member we selected the stand age that minimized the squared error between the modeled biomass and the initial biomass, and then selected the leaf and soil C pools at that stand age. This results is an ensemble of leaf, wood, and soil carbon pools with a covariance structure that is consistent with the calibrated model's dynamics.
 
 For the assimilation experiment, each site was assimilated separately. In the initial round of experiments the observation error was set to a standard deviation of $4.2\: kg/m^2$ based on [@Kennedy2018] Figure 2. Post-assimilation, we then extracted a number of metrics to assess algorithm performance: the posterior probability of disturbance in 2004, the posterior biomass pool size before disturbance, after disturbance, and at the end of the time-series (2017).
 One thing we wanted to assess with the Multinomial filter is the extent of filter divergence, the situation where the model in a data assimilation algorithm becomes so confident in itself that assimilated observations have little impact on the posterior, which then diverges from observations.
